# clock-backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  coverage.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: Staging_Deploy.yml  black.yml  isort.yml  testing.yml
api/: __init__.py  admin.py  apps.py  auth_views.py  authentication.py  celery.py  celery_inst.py  execute_tasks.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utilities.py  views.py
api-docs/: api_docs.py  apps.py
api/idm/: deprovisioning.py
api/management/commands/: conftest.py  create_reports.py  test_commands.py  unlock_month.py  update_reports.py
api/migrations/: 0001_creating_user_model.py  0002_creating_contract_model.py  0003_creating_shift_model.py  0003_shift.py  0004_creating_report_model.py  0005_support_uuid_pk_tags.py  0006_creating_clockedinshift_model.py  0007_user_language.py  0008_auto_20200427_2107.py  0009_auto_20200427_2114.py  0009_repot_ordering_month_year.py  0010_report_ordering_month_year.py  0011_user_add_default_values.py  0012_auto_20200629_1902.py  0013_auto_20200629_1902.py  0014_auto_20200629_1957.py  0014_auto_20200702_1157.py  0015_auto_20200711_2109.py  0016_auto_20200811_1639.py  0017_add_dsgvo_accepted_field_user.py  0018_contract_last_used.py  0019_auto_20210604_2027.py  0020_user_onboarding_passed.py  0021_remove_contract_carryover_target_date.py  0022_auto_20230330_1538.py  0023_alter_uuidtaggeditem_content_type_and_more.py  0023_user_marked_for_deletion.py  0024_contract_color.py  0024_merge_20231115_1721.py  0025_contract_color.py  0026_report_vacation_time.py  0027_alter_report_vacation_time.py  0028_contract_initial_vacation_carryover_minutes_and_more.py  0029_contract_worktime_model_name.py  0030_alter_contract_worktime_model_name.py  0031_contract_percent_fte.py  0032_user_is_supervisor.py  0033_user_supervised_references.py  0034_contract_reference.py  0035_remove_clockedinshift_created_by_and_more.py  (+5 more)
api/oauth/: apps.py  views.py
api/oauth/providers/: __init__.py
api/oauth/providers/goetheuni/: __init__.py  provider.py  urls.py  views.py
api/static/api/css/: tailwind.out.css
api/templates/api/: index.html  stundenzettel.html
api/templatetags/: stundenzettel_utility.py
api/tests/: conftest.py  test_base_models.py  test_deprovisioning.py  test_filters.py  test_serializers.py  test_utilities.py  test_views.py
api/tests/conftest_files/: carryover_conftest.py  clockedinshift_conftest.py  contract_conftest.py  deprovision_conftest.py  general_conftest.py  report_conftest.py  shift_conftest.py  user_conftest.py
api/validators/: __init__.py  base.py  student_employee.py
config/: asgi.py  consumers.py  middleware.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
docker/dokku/: Dockerfile  Procfile  app.json  deploy.sh
docker/local/: Dockerfile.celery  Dockerfile.web  start.sh
docs/: api-docs.rst  api.oauth.providers.rst  api.oauth.rst  api.tests.conftest_files.rst  api.tests.rst  config.settings.rst  faq.migrations.rst  feedback.migrations.rst  feedback.rst  feedback.tests.rst  message.migrations.rst  message.tests.conftest_files.rst  message.tests.rst  modules.rst  requirements.txt
docs/source/: api.migrations.rst  api.rst  conf.py  development.rst  faq.rst  feedback.rst  index.rst  message.rst  project_celery.rst
docs/source/_autosummary/: api.views.rst
docs/source/api/: howto.rst
docs/source/guide/: deployment.rst  development.rst  installation.rst
docs/source/ref/: api.rst  faq.rst  feedback.rst  message.rst  project_celery.rst
faq/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
faq/migrations/: 0001_initial.py  0002_faq_prioritization.py  0003_faqheading_alter_faq_de_answer_alter_faq_de_question_and_more.py
feedback/: apps.py  serializers.py  urls.py  utils.py  views.py
feedback/tests/: conftest.py  test_serializers.py  test_utils.py
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
message/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
message/migrations/: 0001_implement_message_model.py  0002_correct_typo.py  0003_make_valid_to_optional.py  0004_auto_20220519_0949.py  0004_auto_20230330_1538.py  0005_auto_20230509_1246.py  0006_auto_20230515_1422.py
message/tests/: conftest.py  test_base_models.py
message/tests/conftest_files/: general_conftest.py
nginx/: default.conf
project_celery/: celery.py  execute_tasks.py  tasks.py
project_celery/tests/: conftest.py  test_celery.py
supervisor_api/: READEME.md  admin.py  apps.py  encryption.py  mail.py  models.py  urls.py  views.py
supervisor_api/migrations/: 0001_initial.py
