[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Christian Grossmüller <chgad.games@gmail.com>", "Michael Gecht <gecht.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "==19.9.0"
gevent = "==1.4.0"
raven = "==6.10.0"
whitenoise = "==4.1.2"
django-guardian = "==1.4.9"
django-environ = "==0.4.5"
djoser = "*"
python-dateutil = "==2.7.5"
django-anymail = "==5.0"
django-taggit = "==0.23.0"
psycopg2-binary = "==2.8.5"
djangorestframework = "*"
djangorestframework-simplejwt = "5.1.*"
celery = "==5.2.2"
drf-yasg = "*"
django-cors-headers = "*"
pdfkit = "*"
pytest = "==5.3.5"
pytest-django = "*"
django = "==2.2.28"
more-itertools = "*"
django-rosetta = "*"
django-allauth = "^0.41.0"
dj-rest-auth = "1.0.9"
sentry-sdk = "^0.16.3"
django-filter = "^2.4.0"
Unidecode = "^1.2.0"
Sphinx = "^4.5.0"
weasyprint = "^58.1"
holidays = "^0.17"

[tool.poetry.dev-dependencies]
coverage = "==5.0a4"
django_coverage_plugin = "==1.6.0"
ipython = "==7.16.3"
ipdb = "==0.13"
pytest-django = "*"
pytest-sugar = "==0.9.2"
pytest-cov = "==2.6.1"
freezegun = "==0.3.11"
pylint = "==2.2.2"
pylint-django = "==2.0.4"
flake8 = "==3.6.0"
black = "==18.9b0"
werkzeug = "2.0.*"
pytest-freezegun = "*"
django-test-plus = "*"
django-extensions = "*"
django-request-logging = "^0.7.1"
isort = "^4.3.21"

[tool.black]
exclude = '''
/(migrations)/
| /venv
'''
line_length = 88
target_version = ["py38"]

[tool.isort]
profile = "black"
py_version = 38
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

