[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Christian Grossmüller <chgad.games@gmail.com>", "Sören Grieger <soeren.grieger@posteo.de>", "Michael Gecht <gecht.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "==19.9.0"
gevent = "23.7.0"
raven = "==6.10.0"
whitenoise = "==4.1.2"
django-guardian = "2.4.0"
django-environ = "0.6.0"
djoser = "*"
python-dateutil = "==2.7.5"
django-anymail = "8.3"
django-taggit = "2.1.0"
psycopg2-binary = "==2.9.7"
djangorestframework = "*"
djangorestframework-simplejwt = "5.1.*"
celery = "==5.2.2"
drf-yasg = "*"
django-cors-headers = "*"
pdfkit = "*"
pytest = "^7.4.0"
pytest-django = "*"
django = "3.2"
more-itertools = "*"
django-rosetta = "*"
django-allauth = "==0.54.0"
dj-rest-auth = "1.0.9"
sentry-sdk = "^0.16.3"
django-filter = "22.1"
Unidecode = "^1.2.0"
Sphinx = "^4.5.0"
weasyprint = "^58.1"
holidays = "^0.17"
black = "^23.3.0"
pre-commit = "^2.21.0"
isort = "^5.11.5"
pytest-sugar = "^0.9.7"
freezegun = "^1.2.2"
django-coverage-plugin = "2.0.1"

[tool.poetry.dev-dependencies]
coverage = "==5.0a4"
django-coverage-plugin = "==2.0.1"
django = "3.2"
ipython = "==7.16.3"
ipdb = "==0.13"
pytest-django = "*"
pytest-sugar = "==0.9.7"
pytest-cov = "==2.6.1"
freezegun = "==1.2.2"
pylint = "==2.2.2"
pylint-django = "==2.0.4"
flake8 = "==3.6.0"
werkzeug = "2.0.*"
pytest-freezegun = "*"
django-test-plus = "*"
django-extensions = "*"
django-request-logging = "^0.7.1"
black = "^23.3.0"
pre-commit = "^2.21.0"
isort = "^5.11.5"

[tool.black]
exclude = '''
/(migrations)/
| /venv
'''
line_length = 88
target_version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
line_length = 88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

